--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -1155,7 +1155,7 @@ source={Scopus},
 }
 
 @misc{drutes,
-  author = {Kuraz, Michal and Mayer, Petr and Bloecher, Johanna},
+  author = {Kuraz, Michal and Mayer, Petr and J. R. Bl\"ocher },
   title = {{DRUtES} -- an opensource library for solving coupled nonlinear convection-diffusion-reaction equations,},
   year = 2008,
   url = {http://www.drutes.org},
